Fixed text alignment

--- a/templates/style.css
+++ b/templates/style.css
@@ -28,6 +28,7 @@ h2 {
 
 p {
     margin-left: 20px;
+    text-align: justify;
 }
 
 blockquote {
@@ -48,8 +49,4 @@ blockquote {
     color: #999;
     text-align: center;
     margin-top: 20px;
-}
-
-#footer a, #footer a:hover {
-    color: #444;
 }
